feat: add styling in the side nav section

--- a/index.html
+++ b/index.html
@@ -48,53 +48,55 @@
         <!-- Sidebar Navigation -->
         <aside class="sidebar-left">
             <nav class="sidebar-nav">
-                <h1>Dashboard</h1>
+                <div class="sidebar-header">
+                    <span class="icon mdi mdi-view-dashboard"></span>
+                    <h2>Dashboard</h2>
+                </div>
                 <ul class="sidebar-list">
                     <li class="sidebar-item">
-                        <span class="icon"></span>
                         <a href="#" aria-label="Go to Home">Home</a>
+                        <span class="icon mdi mdi-home"></span>
                     </li>
                     <li class="sidebar-item">
-                        <span class="icon"></span>
                         <a href="#" aria-label="Go to Profile">Profile</a>
+                        <span class="icon mdi mdi-card-account-details-outline"></span>
                     </li>
                     <li class="sidebar-item">
-                        <span class="icon"></span>
                         <a href="#" aria-label="Go to Messages">Messages</a>
+                        <span class="icon mdi mdi-message"></span>
                     </li>
                     <li class="sidebar-item">
-                        <span class="icon"></span>
                         <a href="#" aria-label="Go to History">History</a>
+                        <span class="icon mdi mdi-history"></span>
                     </li>
                     <li class="sidebar-item">
-                        <span class="icon"></span>
                         <a href="#" aria-label="Go to Tasks">Tasks</a>
+                        <span class="icon mdi mdi-clipboard-check"></span>
                     </li>
                     <li class="sidebar-item">
-                        <span class="icon"></span>
                         <a href="#" aria-label="Go to Communities">Communities</a>
+                        <span class="icon mdi mdi-account-group"></span>
                     </li>
                 </ul>
-                <h2>Settings</h2>
                 <ul class="sidebar-list">
                     <li class="sidebar-item">
-                        <span class="icon"></span>
                         <a href="#" aria-label="Go to Settings">Settings</a>
+                        <span class="icon mdi mdi-tune-variant"></span>
                     </li>
                     <li class="sidebar-item">
-                        <span class="icon"></span>
                         <a href="#" aria-label="Go to Support">Support</a>
+                        <span class="icon mdi mdi-help-circle"></span>
                     </li>
                     <li class="sidebar-item">
-                        <span class="icon"></span>
                         <a href="#" aria-label="Go to Privacy">Privacy</a>
+                        <span class="icon mdi mdi-shield-account"></span>
                     </li>
                 </ul>
             </nav>
         </aside>
 
         <!-- Main Content -->
-        <main class="content">
+        <main class=" content">
             <h3>Your Projects</h3>
             <div class="projects">
                 <article class="project-card">
