feat: add styling to the content section

--- a/index.html
+++ b/index.html
@@ -100,66 +100,119 @@
             <h3>Your Projects</h3>
             <div class="projects">
                 <article class="project-card">
-                    <h4>Project #1</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div class="project-card-text">
+                        <a href="https://daniel0285.github.io/sign-up-form/" target="_blank" rel="noopener noreferer">
+                            <h4>Sign-up Form</h4>
+                            <p>A sign-up form built with HTML and CSS, demonstrating user-friendly design and
+                                validation techniques. The project showcases skills in structuring forms and styling
+                                them with modern CSS.</p>
+                        </a>
+                    </div>
                     <div class="project-card-actions">
-                        <button aria-label="Edit Project"><span class="icon"></span></button>
-                        <button aria-label="Delete Project"><span class="icon"></span></button>
-                        <button aria-label="Share Project"><span class="icon"></span></button>
+                        <button aria-label="Add to favorites">
+                            <span class="icon mdi mdi-star-box-outline"></span>
+                        </button>
+                        <button aria-label="Watch Project">
+                            <span class="icon mdi mdi-eye-plus-outline"></span>
+                        </button>
+                        <button aria-label="Fork Project"><span class="icon mdi mdi-source-fork"></span></button>
                     </div>
                 </article>
                 <article class="project-card">
-                    <h4>Project #1</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div class="project-card-text">
+                        <a href="https://daniel0285.github.io/calculator/" target="_blank" rel="noopener noreferer">
+                            <h4>Calculator</h4>
+                            <p>A functional calculator created with HTML, CSS, and JavaScript. This project
+                                highlights the implementation of arithmetic operations and interactive UI design for a
+                                seamless user experience.</p>
+                        </a>
+                    </div>
                     <div class="project-card-actions">
-                        <button aria-label="Edit Project"><span class="icon"></span></button>
-                        <button aria-label="Delete Project"><span class="icon"></span></button>
-                        <button aria-label="Share Project"><span class="icon"></span></button>
+                        <button aria-label="Add to favorites">
+                            <span class="icon mdi mdi-star-box-outline"></span>
+                        </button>
+                        <button aria-label="Watch Project">
+                            <span class="icon mdi mdi-eye-plus-outline"></span>
+                        </button>
+                        <button aria-label="Fork Project"><span class="icon mdi mdi-source-fork"></span></button>
                     </div>
                 </article>
                 <article class="project-card">
-                    <h4>Project #2</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div class="project-card-text">
+                        <a href="https://daniel0285.github.io/etch-a-sketch/" target="_blank" rel="noopener noreferer">
+                            <h4>Etch A Sketch</h4>
+                            <p>An interactive Etch-A-Sketch tool inspired by the classic drawing toy. Built with HTML,
+                                CSS, and JavaScript, this project showcases DOM manipulation and event handling to
+                                create a fun, customizable drawing experience.
+                            </p>
+                        </a>
+                    </div>
                     <div class="project-card-actions">
-                        <button aria-label="Edit Project"><span class="icon"></span></button>
-                        <button aria-label="Delete Project"><span class="icon"></span></button>
-                        <button aria-label="Share Project"><span class="icon"></span></button>
+                        <button aria-label="Add to favorites">
+                            <span class="icon mdi mdi-star-box-outline"></span>
+                        </button>
+                        <button aria-label="Watch Project">
+                            <span class="icon mdi mdi-eye-plus-outline"></span>
+                        </button>
+                        <button aria-label="Fork Project"><span class="icon mdi mdi-source-fork"></span></button>
                     </div>
                 </article>
                 <article class="project-card">
-                    <h4>Project #3</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div class="project-card-text">
+                        <a href="https://daniel0285.github.io/rock-paper-scissors/" target="_blank"
+                            rel="noopener noreferer">
+                            <h4>Rock Paper Scissors</h4>
+                            <p>A simple Rock Paper Scissors game designed to run in the browser. Built using JavaScript,
+                                the project demonstrates logic implementation, conditional statements, and basic
+                                interactivity.</p>
+                        </a>
+                    </div>
                     <div class="project-card-actions">
-                        <button aria-label="Edit Project"><span class="icon"></span></button>
-                        <button aria-label="Delete Project"><span class="icon"></span></button>
-                        <button aria-label="Share Project"><span class="icon"></span></button>
+                        <button aria-label="Add to favorites">
+                            <span class="icon mdi mdi-star-box-outline"></span>
+                        </button>
+                        <button aria-label="Watch Project">
+                            <span class="icon mdi mdi-eye-plus-outline"></span>
+                        </button>
+                        <button aria-label="Fork Project"><span class="icon mdi mdi-source-fork"></span></button>
+                    </div>
+                </article>
+
+                <article class="project-card">
+                    <div class="project-card-text">
+                        <a href="https://daniel0285.github.io/landing-page/" target="_blank" rel="noopener noreferer">
+                            <h4>Landing Page</h4>
+                            <p>A landing page created using HTML and CSS, with a focus on replicating a given
+                                design template. This project highlights the use of Flexbox for layout and alignment,
+                                ensuring a visually accurate and well-structured page.</p>
+                        </a>
+                    </div>
+                    <div class="project-card-actions">
+                        <button aria-label="Add to favorites">
+                            <span class="icon mdi mdi-star-box-outline"></span>
+                        </button>
+                        <button aria-label="Watch Project">
+                            <span class="icon mdi mdi-eye-plus-outline"></span>
+                        </button>
+                        <button aria-label="Fork Project"><span class="icon mdi mdi-source-fork"></span></button>
                     </div>
                 </article>
                 <article class="project-card">
-                    <h4>Project #4</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <div class="project-card-actions">
-                        <button aria-label="Edit Project"><span class="icon"></span></button>
-                        <button aria-label="Delete Project"><span class="icon"></span></button>
-                        <button aria-label="Share Project"><span class="icon"></span></button>
+                    <div class="project-card-text">
+                        <a href="https://daniel0285.github.io/sign-up-form/" target="_blank" rel="noopener noreferer">
+                            <h4>Recipe Page</h4>
+                            <p>A basic recipe page built using HTML with minimal CSS styling. This project focuses on
+                                structuring content using semantic HTML and creating a clean, easy-to-read layout.</p>
+                        </a>
                     </div>
-                </article>
-                <article class="project-card">
-                    <h4>Project #5</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     <div class="project-card-actions">
-                        <button aria-label="Edit Project"><span class="icon"></span></button>
-                        <button aria-label="Delete Project"><span class="icon"></span></button>
-                        <button aria-label="Share Project"><span class="icon"></span></button>
-                    </div>
-                </article>
-                <article class="project-card">
-                    <h4>Project #6</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <div class="project-card-actions">
-                        <button aria-label="Edit Project"><span class="icon"></span></button>
-                        <button aria-label="Delete Project"><span class="icon"></span></button>
-                        <button aria-label="Share Project"><span class="icon"></span></button>
+                        <button aria-label="Add to favorites">
+                            <span class="icon mdi mdi-star-box-outline"></span>
+                        </button>
+                        <button aria-label="Watch Project">
+                            <span class="icon mdi mdi-eye-plus-outline"></span>
+                        </button>
+                        <button aria-label="Fork Project"><span class="icon mdi mdi-source-fork"></span></button>
                     </div>
                 </article>
             </div>
