feat: add styling to right side bar

--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
                         <a href="https://daniel0285.github.io/sign-up-form/" target="_blank" rel="noopener noreferer">
                             <h4>Sign-up Form</h4>
                             <p>A sign-up form built with HTML and CSS, demonstrating user-friendly design and
-                                validation techniques. The project showcases skills in structuring forms and styling
-                                them with modern CSS.</p>
+                                validation techniques.</p>
                         </a>
                     </div>
                     <div class="project-card-actions">
@@ -123,8 +122,7 @@
                         <a href="https://daniel0285.github.io/calculator/" target="_blank" rel="noopener noreferer">
                             <h4>Calculator</h4>
                             <p>A functional calculator created with HTML, CSS, and JavaScript. This project
-                                highlights the implementation of arithmetic operations and interactive UI design for a
-                                seamless user experience.</p>
+                                highlights the implementation of arithmetic operations.</p>
                         </a>
                     </div>
                     <div class="project-card-actions">
@@ -142,8 +140,7 @@
                         <a href="https://daniel0285.github.io/etch-a-sketch/" target="_blank" rel="noopener noreferer">
                             <h4>Etch A Sketch</h4>
                             <p>An interactive Etch-A-Sketch tool inspired by the classic drawing toy. Built with HTML,
-                                CSS, and JavaScript, this project showcases DOM manipulation and event handling to
-                                create a fun, customizable drawing experience.
+                                CSS, and JavaScript, this project showcases DOM manipulation.
                             </p>
                         </a>
                     </div>
@@ -163,8 +160,7 @@
                             rel="noopener noreferer">
                             <h4>Rock Paper Scissors</h4>
                             <p>A simple Rock Paper Scissors game designed to run in the browser. Built using JavaScript,
-                                the project demonstrates logic implementation, conditional statements, and basic
-                                interactivity.</p>
+                                the project demonstrates logic implementation.</p>
                         </a>
                     </div>
                     <div class="project-card-actions">
@@ -183,8 +179,7 @@
                         <a href="https://daniel0285.github.io/landing-page/" target="_blank" rel="noopener noreferer">
                             <h4>Landing Page</h4>
                             <p>A landing page created using HTML and CSS, with a focus on replicating a given
-                                design template. This project highlights the use of Flexbox for layout and alignment,
-                                ensuring a visually accurate and well-structured page.</p>
+                                design template. This project highlights the use of Flexbox.</p>
                         </a>
                     </div>
                     <div class="project-card-actions">
@@ -201,8 +196,7 @@
                     <div class="project-card-text">
                         <a href="https://daniel0285.github.io/sign-up-form/" target="_blank" rel="noopener noreferer">
                             <h4>Recipe Page</h4>
-                            <p>A basic recipe page built using HTML with minimal CSS styling. This project focuses on
-                                structuring content using semantic HTML and creating a clean, easy-to-read layout.</p>
+                            <p>A basic recipe page built using HTML with minimal CSS styling.</p>
                         </a>
                     </div>
                     <div class="project-card-actions">
@@ -221,41 +215,48 @@
         <!-- Sidebar with Announcements and Trending -->
         <aside class="sidebar-right">
             <section class="announcements">
-                <h4>Announcements</h4>
-                <article class="announcement">
-                    <h5>Title</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </article>
-                <article class="announcement">
-                    <h5>Title</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </article>
-                <article class="announcement">
-                    <h5>Title</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </article>
+                <h3>Announcements</h3>
+                <div class="sidebar-card">
+                    <article class="announcement">
+                        <h4>Site Maintenance</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </article>
+                    <article class="announcement">
+                        <h4>Community Share Day</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </article>
+                    <article class="announcement">
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </article>
+                </div>
             </section>
             <section class="trending">
-                <h4>Trending</h4>
-                <div class="trending-item">
-                    <img src="profile.jpg" alt="User avatar" class="med profile-pic">
-                    <div>
-                        <h5>@user</h5>
-                        <p>Title</p>
+                <h3>Trending</h3>
+                <div class="sidebar-card">
+                    <div class="trending-item">
+                        <img src="profile.jpg" alt="User avatar" class="med profile-pic">
+                        <div>
+                            <p><span>@tegan</span><br>World Peace Builder</p>
+                        </div>
                     </div>
-                </div>
-                <div class="trending-item">
-                    <img src="profile.jpg" alt="User avatar" class="med profile-pic">
-                    <div>
-                        <h5>@user</h5>
-                        <p>Title</p>
+                    <div class="trending-item">
+                        <img src="profile.jpg" alt="User avatar" class="med profile-pic">
+                        <div>
+                            <p><span>@morgan</span><br>Super Cool Project</p>
+                        </div>
                     </div>
-                </div>
-                <div class="trending-item">
-                    <img src="profile.jpg" alt="User avatar" class="med profile-pic">
-                    <div>
-                        <h5>@user</h5>
-                        <p>Title</p>
+                    <div class="trending-item">
+                        <img src="profile.jpg" alt="User avatar" class="med profile-pic">
+                        <div>
+                            <p><span>@kendall</span><br>Life Changing App</p>
+                        </div>
+                    </div>
+                    <div class="trending-item">
+                        <img src="profile.jpg" alt="User avatar" class="med profile-pic">
+                        <div>
+                            <p><span>@alex</span><br>No Traffic Maker</p>
+                        </div>
                     </div>
                 </div>
             </section>
